updating animation to size correctly without cut off

--- a/main.css
+++ b/main.css
@@ -277,7 +277,7 @@ div .photocenter{
   -moz-transform:scale(1.25); /* Firefox*/
   -ms-transform:scale(1.25); /* IE 9 */
   -o-transform:scale(1.25); /* Opera */
-  transform: scale(1.5);
+  transform: scale(1.25);
 
 }
 .footer{
